- Imported hammerjs to enable swipe gestures on carousel - Fixed text alignment on the card on home component - Fixed the modal window not being in sync with the changing themes

--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -42,7 +42,6 @@ p {
     display: inline-block;
     width: 45vw;
     margin: 10px;
-    text-align: center;
     height: 300px;
   }
 }
