--- a/src/dark.scss
+++ b/src/dark.scss
@@ -36,3 +36,7 @@
   background-color: #4B515D;
   color: white !important;
 }
+
+.modal-content {
+  background-color: #2E2E2E;
+}
