--- a/src/light.scss
+++ b/src/light.scss
@@ -36,3 +36,6 @@
   color: white !important;
 }
 
+.modal-content {
+  background-color: #e3f2fd;
+}
